--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,39 @@ html {
   scroll-behavior: smooth;
 }
 
+table tr,
+table th {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+table th {
+  white-space: nowrap;
+}
+
+table tr:nth-child(even) {
+  background-color: rgba(100, 150, 0, 0.15);
+}
+
+table tr.clickable-row:hover{
+  cursor: pointer;
+  background-color: #F4F8FA;
+}
+
+.no-table-data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+  border-top: 1px solid #e8eaed;
+  /* background-color: rgb(224, 224, 224); */
+  min-height: 200px;
+  width: 100%;
+}
+
+
 header {
   width: 100%;
   padding-right: var(--section-padding-y);
@@ -35,6 +68,16 @@ body {
 
 footer {
   width: 100%;
+}
+
+footer a:link, footer a:visited {
+  color: #888;
+}
+
+footer h3{
+  font-weight: 600;
+  font-size: 26px;
+  text-transform: uppercase;
 }
 
 /* For all mobile users only */
